Working code. Need to add Docs

--- a/src/test/resources/event.json.template
+++ b/src/test/resources/event.json.template
@@ -4,5 +4,5 @@
   "lat" : "${CUST_LAT}",
   "lon" : "${CUST_LON}",
   "cust_id" : "${CUST_ID}",
-  "device_id": "${DEVICE_ID}",
+  "device_id": "${DEVICE_ID}"
 }
